@@ -1,3 +1,8 @@
+2007-12-24  Robert Ancell  <robert.ancell@gmail.com>
+
+	* lib/scene/opengl/opengl.py: Mark animation as complete when pieces are deleted (fixes game
+	  history crash reported in bug #488525)
+
 2007-08-12  Andreas Røsdal  <andreasr@gnome.org>
 
 	* src/lib/scene-cairo/__init__.py: Mark board numbers for translation,
